syntax = "proto3";

import "types.proto";

service MessageService {
    rpc CreateChat (CreateChatRequest) returns (CreateChatResponse) {}
    rpc GetChatList (GetChatRequest) returns (GetChatResponse) {}
    rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse) {}
    rpc ConnectToChat (ConnectRequest) returns (ConnectResponse) {}
    rpc ChatStream (stream ChatMessage) returns (stream ChatMessage) {}
}

message CreateChatRequest {
    UserInfo creator = 1;
    string chat_name = 2;
    repeated UserInfo users = 3;
}

message CreateChatResponse {
    string message = 1;
}

message GetChatRequest  {
    string username = 1;
}

message GetChatResponse {
    repeated ChatInfo chats = 1;
}

message GetAllUsersRequest {
    string username = 1;
}

message GetAllUsersResponse {
    repeated UserInfo users = 1;    
}

message ConnectRequest {
    ChatInfo chat = 1;
    UserInfo user = 2;
}

message ConnectResponse {
    string message = 1;
}

message ChatMessage {
    ChatInfo chat = 1;
    UserInfo user = 2;
    string message = 3;
}